# goldendict-ng

./: .clang-format  .clang-tidy  .editorconfig  .git-blame-ignore-revs  .gitignore  .gitmodules  .markdownlint.json  .prettierignore  .prettierrc.js  404.html  AppImageBuilder.yml  CHANGES.md  CMakeLists.txt  CMake_Unix.cmake  CMake_Win.cmake  CONTRIBUTING.md  CREDITS.txt  README.md  VERSION  aard.cc  about.cc  about.hh  about.ui  ankiconnector.cpp  ankiconnector.h  article-style-st-babylon.css  article-style-st-classic.css  article-style-st-lingoes-blue.css  article-style-st-lingoes.css  article-style-st-lingvo.css  article-style-st-modern.css  article-style.css  article_inspect.cpp  article_maker.cc  article_maker.hh  article_netmgr.cc  article_netmgr.hh  articleview.cc  articleview.hh  articlewebpage.cpp  (+152 more)
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yaml  bug_report_cn.md
.github/scripts/: windows-publish.ps1
.github/workflows/: AutoTag.yml  Manual-Build-Action.yml  PR-check-cmake.yml  PR-check-windows.yml  Release-all.yml  Release-chaos.yml  Sonar Cloud.yml  auto clang format.yml  auto format.yml  build.yml  cmake build check.yml  cmake build test.yml  codeql.yml  create-vcpkg-arm64-export-archive.yml  create-vcpkg-export-archive.yml  deploy_website.yml  ffmpeg-macos-build.yml  ffmpeg.yml  issue-translator.yml  macos-6.2.yml  macos-6.x.yml  macos-PR-check.yml  macos-arm-homebrew.yml  macos-homebrew-PR-check.yml  macos-homebrew-breakpad.yml  macos-homebrew-nobreakpad.yml  macos-homebrew-xapian.yml  macos-homebrew.yml  macos-m1.yml  macos.yml  release-AutoTag.yml  release-all.yml  release-macos-homebrew.yml  release-windows-vcpkg-cmake.yml  release-windows.yml  ubuntu-6.2-xapian.yml  ubuntu-6.2.yml  ubuntu-PR-check.yml  ubuntu.yml  unused-PR-check-windows.yml  (+6 more)
ar-SA/locale/: ar_SA.ts  ay_WI.ts  be_BY.ts  be_BY@latin.ts  bg_BG.ts  cs_CZ.ts  de_CH.ts  de_DE.ts  el_GR.ts  eo_EO.ts  es_AR.ts  es_BO.ts  es_ES.ts  fa_IR.ts  fi_FI.ts  fr_FR.ts  ie_001.ts
architecture/: index.html
base/: globalregex.cc  globalregex.hh
be/locale/: ar_SA.ts  ay_WI.ts  be_BY.ts  be_BY@latin.ts  bg_BG.ts  cs_CZ.ts  de_CH.ts  de_DE.ts  el_GR.ts  eo_EO.ts  es_AR.ts  es_BO.ts  es_ES.ts  fa_IR.ts  fi_FI.ts  hi_IN.ts  ie_001.ts  it_IT.ts
bench/: bench-case-folding.cpp
bg/locale/: ar_SA.ts  ay_WI.ts  be_BY.ts  be_BY@latin.ts  bg_BG.ts  cs_CZ.ts  de_CH.ts  de_DE.ts  el_GR.ts  eo_EO.ts  es_AR.ts  es_BO.ts  es_ES.ts  fa_IR.ts  fi_FI.ts  hi_IN.ts  ie_001.ts  it_IT.ts
cmake/: Deps_Linux.cmake  Deps_Unix.cmake  Deps_Vcpkg.cmake  Deps_Win.cmake  Deps_macOS.cmake  Package_Linux.cmake  Package_Windows.cmake  Package_macOS.cmake
cs/locale/: ar_SA.ts  ay_WI.ts  be_BY.ts  be_BY@latin.ts  bg_BG.ts  cs_CZ.ts  de_CH.ts  de_DE.ts  el_GR.ts  eo_EO.ts  es_AR.ts  es_BO.ts  es_ES.ts  fa_IR.ts  fi_FI.ts  hi_IN.ts  ie_001.ts  it_IT.ts
custom_dictionary/: index.html
de-CH/locale/: ar_SA.ts  ay_WI.ts  be_BY.ts  be_BY@latin.ts  bg_BG.ts  cs_CZ.ts  de_CH.ts  de_DE.ts  el_GR.ts  eo_EO.ts  es_AR.ts  es_BO.ts  (+5 more)
developer/: index.html
dictformats/: index.html
docs/: Readme.md  cmdline.html  cssfiles.html  debug.html  dicts.html  favorites.html  formats.html  fulltextsearch.html  gdabout.html  goldendict.index  goldendict.qhp  headwords.html  hotkeys.html  index.html  options.html  popup.html  portable.html  startup_optimization.md  toolbar.html
faq/: index.html
feedbacks/: index.html
howto/: how to compile with cmake.md  how to connect with anki.md  how to use .clang-format to format the code.md
icons/: README.txt  macicon.icns  programicon.rc  readme.txt
install/: index.html
locale/: README.md  Readme.md  ar.ts  ar_SA.ts  ay.ts  ay_BO.ts  ay_WI.ts  be.ts  be_BY.ts  be_BY@latin.ts  bg.ts  bg_BG.ts  bs_BA.ts  crowdin.ts  cs.ts  cs_CZ.ts  de.ts  de_CH.ts  de_DE.ts  el.ts  el_GR.ts  en.ts  eo.ts  eo_EO.ts  eo_UY.ts  es.ts  es_AR.ts  es_BO.ts  es_ES.ts  fa.ts  fa_IR.ts  fi.ts  fi_FI.ts  fr.ts  fr_FR.ts  fy_NL.ts  hi.ts  hi_IN.ts  hu.ts  hu_HU.ts  (+52 more)
maclibs/: README.md
manage_groups/: index.html
manage_sources/: index.html
opencc/: JPVariants.ocd2  JPVariantsRev.ocd2  STPhrases.ocd2  TSPhrases.ocd2  TWPhrases.ocd2  TWPhrasesRev.ocd2  vcpkg.spdx.json  vcpkg_abi_info.txt
redist/: io.github.xiaoyifang.goldendict_ng.desktop  io.github.xiaoyifang.goldendict_ng.metainfo.xml  io.github.xiayifang.goldendict_ng.desktop  io.github.xiayifang.goldendict_ng.metainfo.xml  mac_info_plist_template_cmake.plist  myInfo.plist  org.goldendict.GoldenDict-ng.desktop  org.goldendict.GoldenDict-ng.metainfo.xml  org.goldendict.GoldenDict.desktop  org.xiaoyifang.GoldenDict_NG.desktop  org.xiaoyifang.GoldenDict_NG.metainfo.xml
resources/: gd-custom.js
scripts/: gd-builtin.js  gd-custom.js
search/: search_index.json
src/: ankiconnector.cc  ankiconnector.hh  article_inspect.cc  article_inspect.hh  article_maker.cc  article_maker.hh  article_netmgr.cc  article_netmgr.hh  articlewebpage.cc  articlewebview.cc  audiolink.cc  audiolink.hh  audiooutput.cc  audiooutput.hh  audioplayerfactory.cc  audioplayerfactory.hh  audioplayerinterface.hh  btreeidx.cc  btreeidx.hh  build_config.hh.in  chunkedstorage.cc  chunkedstorage.hh  concurrent_list.cc  concurrent_list.hh  config.cc  config.hh  decompress.cc  decompress.hh  delegate.cc  delegate.hh  dictdfiles.hh  dictionary_group.cc  dictionary_group.hh  dictserver.hh  dictzip.c  editdictionaries.cc  externalaudioplayer.cc  externalaudioplayer.hh  externalviewer.cc  externalviewer.hh  (+85 more)
topic_anki/: index.html
topic_commandline/: index.html
topic_flatpak/: index.html
topic_gd-tools/: index.html
topic_move_index_folder/: index.html
topic_portablemode/: index.html
topic_transliteration/: index.html
topic_userstyle/: index.html
topic_wayland/: index.html
topic_website_scripting/: index.html
topic_website_whitelist/: index.html
ui_audioengine/: index.html
ui_favorites/: index.html
ui_fulltextsearch/: index.html
ui_headwords/: index.html
ui_popup/: index.html
ui_shortcuts/: index.html
ui_toolbar/: index.html
website/: .gitignore  README.md  mkdocs.yml
(+1029 files in other folders)
